--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.diagram-component {
+  width: 400px;
+  height: 400px;
+  border: solid 1px black;
+  background-color: white;
+}
+
+/*****************************************************/
 .App {
   text-align: center;
 }
